<resources>
    <string name="app_name">InfoParks</string>
    <string name="nairobi">NAIROBI</string>
    <string name="central">CENTRAL</string>
    <string name="eastern">EASTERN</string>
    <string name="northeastern">NORTH EASTERN</string>
    <string name="coast">COAST</string>
    <string name="riftvalley"> RIFT VALLEY</string>
    <string name="nyanza">NYANZA</string>
    <string name="western">WESTERN</string>

    <string name="nairobipark">nairobipark</string>
    <string name="nairobititle">Nairobi National Park</string>
    <string name="nairobiabout">About</string>
    <string name="nairobicontent1">A short drive out of Nairobi central business district is the Nairobi National Park. Wide open grass plains and backdrop of the city scrapers, scattered acacia bush play host to a wide variety of wildlife including the endangered black rhino, lions, leopards, cheetahs, hyenas, buffaloes, giraffes and diverse birdlife with over 400 species recorded. Visitors can enjoy the parks picnic sites, three campsites and the walking trails for hikers.</string>
    <string name="nairobifeatures">Key Features</string>
    <string name="nairobiwildlife">Wildlife</string>
    <string name="nairobipicnic">Picnic Facilities</string>

    <string name="orphanagetitle">Nairobi Animal Orphange</string>
    <string name="orphanageabout">About</string>
    <string name="orphanagecontent1">The Nairobi Animal Orphanage is located in the Nairobi National Park. It serves a treatments and rehabilitation centre for wild animals. The Orphanage hosts lions, cheetahs, hyenas, jackals, serval cats, rare Sokoke cats, warthogs, leopards, various monkeys, baboons and buffalo. Various birds can also be viewed including parrots, guinea fowls, crowned cranes and ostriches.</string>
    <string name="orphanagefeatures">Key Features</string>
    <string name="orphanagewildlife">Wildlife</string>
    <string name="orphanagepicnic">Birds</string>
    <string name="orphanage">orphanage</string>

    <string name="coasttitle">Mombasa Marine Park</string>
    <string name="coastabout">About</string>
    <string name="coastcontent1">Warm azure ocean, swaying coconut palms on white sandy beaches are to be found in the Mombasa Marine National Park and Reserve. The park lies between the Mtwapa and Tudor Creeks and its blue waters are ideal for wind surfing, water skiing, snorkelling and diving. They also provide a home to a colourful variety of marine species including crabs, starfish, stone fish, cucumbers sea urchins, corals, turtles, sea grasses and interesting migratory birds including crab plovers.</string>
    <string name="coastfeatures">Key Features</string>
    <string name="coastwildlife">Abundant Bird Life</string>
    <string name="coastpicnic">Fish</string>

    <string name="watamutitle">Watamu Marine Park</string>
    <string name="watamuabout">About</string>
    <string name="watamucontent1">Green turtles, unique coral gardens, the Gede Ruins – the Watamu Marine National Park and Reserve has it all. The park is part of a complex of marine and tidal habitats along the Kenya’s north coast with rich and diverse bird life, fish, turtles and dugongs. Visitors can enjoy the white sandy beaches, snorkeling, water skiing, windsurfing and glass bottomed boat tours.</string>
    <string name="watamufeatures">Key Features</string>
    <string name="watamuwildlife">Abundant Bird Life</string>
    <string name="watamupicnic">Fish</string>

    <string name="malindititle">Malindi Marine Park</string>
    <string name="malindiabout">About</string>
    <string name="malindicontent1">From swimming with zebra fish to windsurfing, this beautiful slice of Kenyas Indian Ocean coastline is provides the perfect getaway. The park is endowed with magnificent resources such as fringing reefs, coral gardens in the lagoons, sea grass beds, mangroves, mudflats, marine mammals, turtles and various species of shorebirds. Visitors can also enjoy glass bottom boat rides, snorkelling, camping and beach walks in this veritable paradise.</string>
    <string name="malindifeatures">Key Features</string>
    <string name="malindiwildlife">Marine Life</string>
    <string name="malindipicnic">Fish</string>

    <string name="kisitetitle">Kisite Mpunguti Marine Park</string>
    <string name="kisiteabout">About</string>
    <string name="kisitecontent1">Unspoiled, beautiful and sun kissed, the Kisite Marine Park was established to protect the scenic islands and special habitats of a wide range of endemic marine animals and breeding migratory birds. It lies in the coral gardens south of Wasini Island and encompasses three small coral rag forest islands, each with considerable areas of fringing reef. Kisite is one of the most rewarding snorkelling locations at the coast. Visitors can also enjoy bird watching, diving and of course, sunbathing.</string>
    <string name="kisitefeatures">Key Features</string>
    <string name="kisitewildlife">Abundant Bird Life</string>
    <string name="kisitepicnic">Fish</string>

=======
    <string name="samburu">Enjoy a quintessential Kenyan northern safari with unrestricted access to rugged East African wilderness by including Samburu National Reserve in your bush plans! The 165-square kilometers (64 square miles) reserve is located northeast of Laikipia and is home to some of Africa’s rarest flora and fauna.</string>
    <string name="laikipia">Laikipia National Reserve is a remote and truly wild corner of Kenya, the Laikipia National Park boasts incredible game viewing in a spectacularly beautiful setting. Two rivers, the Ewaso Nyiro and Ewaso Narok run through the area, attracting a rich variety of wildlife, including the second largest population of elephant in Kenya.</string>
    <string name="shaba">Shaba National Reserve in northern Kenya offers the astute African traveler 92 square miles (239 square kilometers) of breathtaking scenery amidst arid grasslands and sparse woodland set against the backdrop hills of Shaba, a volcanic extinct highland. The reserve is named for the 1525-meter Mount Shaba that was the yesteryear source of varied lava flow across the reserve. Along the northern border, the Ewaso Nyiro River winds through deep gorges, along sandbanks, then cascades down Chandler’s Falls and finally draining it all at Lorian Swamp. </string>
    <string name="mtKenya">Climbing to 5,199 meters, Mount Kenya is the second tallest mountain in Africa. The scenery surrounding this designated World Heritage Site is breath-taking. It is pristine wilderness with lakes, tarns, glaciers, dense forest, mineral springs and a selection of rare and endangered species of animals, high altitude adapted plains game and unique montane and alpine vegetation. Visitors can enjoy mountain climbing, camping and caving with the mountains rugged glacier-clad peaks providing the perfect backdrop.</string>
    <string name="aberdare">Picturesque, steep forested ravines and open moorland characterise the Aberdare National Park. The park provides a habitat for elephants, black rhinos, leopards, spotted hyenas, olive baboons, black and white colobus monkeys, buffalos, warthogs and bushbucks among others. Rare sightings include those of the Giant Forest hog, bongo, golden cat, serval cat, African wild cat, African civet cat and the blue duiker. Visitors can indulge in picnics, trout fishing in the rivers and camping in the moorlands. Bird viewing is rewarding, with over 250 species of birds in the park, including the Francolin, Sparrow hawks, goshawks, eagles, sunbirds and plovers.</string>
    <string name="tsavoEast">Tsavo East National Park</string>
    <string name="tsavodes">Tsavo East National Park is one of the oldest and largest parks in Kenya at 13,747 square kilometres. Situated in a semi-arid area previously known as the Taru Desert it opened in April 1948, it is located near the town of Voi in the Taita-Taveta County of the former Coast Province. </string>
>>>>>>> 2558412b243c9d3a3919ed262dce726365a982d7
</resources>
