<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/nairobi"
            android:id="@+id/button1"
            android:layout_weight="0.15"
            android:background="@drawable/button"
            style="@style/button_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/central"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.14"
            android:background="@drawable/button"
            style="@style/button_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/eastern"
            android:id="@+id/button3"
            android:layout_weight="0.11"
            android:background="@drawable/button"
            style="@style/button_text" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/northeastern"
            android:id="@+id/button4"
            android:layout_weight="0.11"
            android:background="@drawable/button"
            style="@style/button_text" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/coast"
            android:id="@+id/button5"
            android:layout_weight="0.11"
            android:background="@drawable/button"
            style="@style/button_text" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/riftvalley"
            android:id="@+id/button6"
            android:layout_weight="0.11"
            android:background="@drawable/button"
            style="@style/button_text" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/nyanza"
            android:id="@+id/button7"
            android:layout_weight="0.11"
            android:background="@drawable/button"
            style="@style/button_text" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/western"
            android:id="@+id/button8"
            android:layout_weight="0.11"
            android:background="@drawable/button"
            style="@style/button_text" />

    </LinearLayout>

</RelativeLayout>

