<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAlignment="center"
        android:fillViewport="false"
        android:layout_alignParentEnd="false">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_marginBottom="190dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/coasttitle"
                android:id="@+id/textView1"
                android:textAlignment="center"
                android:textColor="#006400" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="210dp"
                android:id="@+id/imageView9"
                android:src="@drawable/mombasa"
                android:background="#192800"
                android:contentDescription="@string/nairobipark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/coastabout"
                android:id="@+id/textView3"
                android:textAlignment="center"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/coastcontent1"
                android:id="@+id/textView4"
                android:textAlignment="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/coastfeatures"
                android:id="@+id/textView5"
                android:textAlignment="center"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/coastwildlife"
                android:id="@+id/textView6"
                android:textAlignment="textStart"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/coastpicnic"
                android:id="@+id/textView7"
                android:textAlignment="textStart"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textColor="#006400" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/watamutitle"
                android:id="@+id/textView8"
                android:textAlignment="center"
                android:textColor="#006400" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/imageView2"
                android:contentDescription="@string/orphanage"
                android:src="@drawable/watamu"
                android:background="#192800"
                android:layout_weight="1"
                android:scaleType="fitXY"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/watamuabout"
                android:id="@+id/textView10"
                android:textAlignment="center"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/watamucontent1"
                android:id="@+id/textView11"
                android:textAlignment="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/watamufeatures"
                android:id="@+id/textView12"
                android:textAlignment="center"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/watamuwildlife"
                android:id="@+id/textView13"
                android:textAlignment="textStart"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/watamupicnic"
                android:id="@+id/textView14"
                android:textAlignment="textStart"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textColor="#006400" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
