<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAlignment="center"
        android:fillViewport="false"
        android:layout_alignParentEnd="false">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="190dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/nairobititle"
                android:id="@+id/textView1"
                android:textAlignment="center"
                android:textColor="#006400" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:id="@+id/imageView2"
                android:contentDescription="@string/nairobipark"
                android:src="@drawable/nairobi"
                android:background="#192800" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/nairobiabout"
                android:id="@+id/textView3"
                android:textAlignment="center"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/nairobicontent1"
                android:id="@+id/textView4"
                android:textAlignment="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/nairobifeatures"
                android:id="@+id/textView5"
                android:textAlignment="center"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/nairobiwildlife"
                android:id="@+id/textView6"
                android:textAlignment="textStart"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/nairobipicnic"
                android:id="@+id/textView7"
                android:textAlignment="textStart"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textColor="#006400" />

            <!--haeuyzbhxsfdbcawzs-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/orphanagetitle"
                android:id="@+id/textView8"
                android:textAlignment="center"
                android:textColor="#006400" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:id="@+id/imageView9"
                android:contentDescription="@string/nairobipark"
                android:src="@drawable/orhanage"
                android:background="#192800" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/orphanageabout"
                android:id="@+id/textView10"
                android:textAlignment="center"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/orphanagecontent1"
                android:id="@+id/textView11"
                android:textAlignment="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/orphanagefeatures"
                android:id="@+id/textView12"
                android:textAlignment="center"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/orphanagewildlife"
                android:id="@+id/textView13"
                android:textAlignment="textStart"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textColor="#006400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/orphanagepicnic"
                android:id="@+id/textView14"
                android:textAlignment="textStart"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textColor="#006400" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
