<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Laikipia National Park"
                android:id="@+id/textView5"
                android:paddingBottom="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/laikipia"
                android:id="@+id/textView6"
                android:paddingBottom="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Samburu National Park"
                android:id="@+id/textView7"
                android:paddingBottom="2dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/imageView6"
                android:paddingBottom="2dp"
                android:src="@drawable/Samburu"
                android:background="#192800" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/samburu"
                android:id="@+id/textView10"
                android:paddingBottom="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Shaba National Park"
                android:id="@+id/textView8"
                android:paddingBottom="2dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/imageView7"
                android:paddingBottom="2dp"
                android:src="@drawable/Shaba"
                android:background="#192800" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/shaba"
                android:id="@+id/textView9"
                android:paddingBottom="2dp"
                />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BACK"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:background="@drawable/Laikipia"
        android:paddingBottom="2dp"
        />


</LinearLayout>
